fixed currency display items to be shon on mobile

--- a/stock-tracker/src/assets/styles/Header.css
+++ b/stock-tracker/src/assets/styles/Header.css
@@ -173,9 +173,7 @@
   }
   .footer,
   .header__btns,
-  .market_status_display,
-  .currency_display__item__industry,
-  .currency_display__item__currency {
+  .market_status_display{
     display: none;
   }
   .price_display {
